# rust_database_assignment

./: .gitignore  Cargo.toml  Makefile  build.rs  out.txt  test.py
.devcontainer/: Dockerfile  devcontainer.json
proto/: database.proto
src/: column_definition.rs  database_manager.rs  file_manager.rs  generated_types.rs  main.rs  nom_parser.rs  parser.rs  semantic_processor.rs  table_definition.rs  table_manager.rs  token.rs  types.proto
src/.devcontainer/: devcontainer.json
