[package]
name = "db_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
nom = "7.1.3"
prost = "0.13.3"

[build-dependencies]
prost-build = "0.13.3"

[package.metadata.cargo-scripts]
setup = { script = "cargo run -- 'CREATE TABLE employees3 (id INT, first_name STRING(100) NOT NULL); INSERT INTO employees3 VALUES (1, 'John Doe'); INSERT INTO employees3 VALUES (2, 'Jane Smith'); INSERT INTO employees3 VALUES (3, 'Alice Johnson'); SELECT * FROM employees3;'" }
